--- a/.golangci.yml
+++ b/.golangci.yml
@@ -12,6 +12,9 @@
 
 version: "2"
 
+run:
+  modules-download-mode: readonly # fail lint if go.mod file is outdated
+
 issues:
   # Maximum count of issues with the same text.
   # Set to 0 to disable.
