--- a/.golangci.yml
+++ b/.golangci.yml
@@ -87,7 +87,7 @@ linters:
     - loggercheck # checks key value pairs for common logger libraries (kitlog,klog,logr,zap)
     - makezero # finds slice declarations with non-zero initial length
     - mirror # reports wrong mirror patterns of bytes/strings usage
-    - mnd # detects magic numbers
+    #- mnd # detects magic numbers
     - musttag # enforces field tags in (un)marshaled structs
     - nakedret # finds naked returns in functions greater than a specified function length
     - nestif # reports deeply nested if statements
@@ -266,6 +266,7 @@ linters:
         - ^golang.org/x/tools/go/analysis.Analyzer$
         - ^google.golang.org/protobuf/.+Options$
         - ^gopkg.in/yaml.v3.Node$
+        - ^github.com/danielgtaylor/huma/.+Operation$
 
     funcorder:
       # Checks if the exported methods of a structure are placed before the non-exported ones.
@@ -423,7 +424,7 @@ linters:
   exclusions:
     # Log a warning if an exclusion rule is unused.
     # Default: false
-    warn-unused: true
+    warn-unused: false
     # Predefined exclusion rules.
     # Default: []
     presets:
@@ -453,3 +454,5 @@ linters:
           - gosec
           - noctx
           - wrapcheck
+          - exhaustruct
+          - gochecknoglobals
