--- a/.golangci.yml
+++ b/.golangci.yml
@@ -54,6 +54,7 @@ linters:
     - bodyclose # checks whether HTTP response body is closed successfully
     - canonicalheader # checks whether net/http.Header uses canonical header
     - copyloopvar # detects places where loop variables are copied (Go 1.22+)
+    #- cyclop # checks function and package cyclomatic complexity
     - depguard # checks if package imports are in a list of acceptable packages
     - dupl # tool for code clone detection
     - durationcheck # checks for two durations multiplied together
@@ -66,6 +67,7 @@ linters:
     - fatcontext # detects nested contexts in loops
     - forbidigo # forbids identifiers
     - funcorder # checks the order of functions, methods, and constructors
+    #- funlen # tool for detection of long functions
     - gocheckcompilerdirectives # validates go compiler directive comments (//go:)
     - gochecknoglobals # checks that no global variables exist
     - gochecknoinits # checks that no init functions are present in Go code
@@ -73,6 +75,7 @@ linters:
     - gocognit # computes and checks the cognitive complexity of functions
     - goconst # finds repeated strings that could be replaced by a constant
     - gocritic # provides diagnostics that check for bugs, performance and style issues
+    #- gocyclo # computes and checks the cyclomatic complexity of functions
     #- godot # checks if comments end in a period
     - gomoddirectives # manages the use of 'replace', 'retract', and 'excludes' directives in go.mod
     - goprintffuncname # checks that printf-like functions are named with f at the end
@@ -208,6 +211,15 @@ linters:
             - pkg: log$
               desc: Use log/slog instead, see https://go.dev/blog/slog
 
+    # cyclop:
+    #   # The maximal code complexity to report.
+    #   # Default: 10
+    #   max-complexity: 30
+    #   # The maximal average package complexity.
+    #   # If it's higher than 0.0 (float) the check is enabled.
+    #   # Default: 0.0
+    #   package-average: 10.0
+
     embeddedstructfieldcheck:
       # Checks that sync.Mutex and sync.RWMutex are not used as embedded fields.
       # Default: false
@@ -260,6 +272,16 @@ linters:
       # Checks if the exported methods of a structure are placed before the non-exported ones.
       # Default: true
       struct-method: false
+
+    # funlen:
+    #   # Checks the number of lines in a function.
+    #   # If lower than 0, disable the check.
+    #   # Default: 60
+    #   lines: 100
+    #   # Checks the number of statements in a function.
+    #   # If lower than 0, disable the check.
+    #   # Default: 40
+    #   statements: 50
 
     gochecksumtype:
       # Presence of `default` case in switch statements satisfies exhaustiveness, if all members are not listed.
@@ -427,7 +449,7 @@ linters:
           - bodyclose
           - dupl
           - errcheck
-          - funlen
+          #- funlen
           - goconst
           - gosec
           - noctx
