Disable gocheckglobals in file flags.go

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -457,3 +457,6 @@ linters:
           - wrapcheck
           - exhaustruct
           - gochecknoglobals
+      - path: "flags.go"
+        linters:
+          - gochecknoglobals
